TODO
- Significant performance improvements in spring relaxation algorithm
- 15% performance improvements in rendering
- Improved auto-focus on ship
- Clouds' horizontal positions are now perspective-corrected
	- Thanks to Dario Bazzichetto for the idea!

1.19.1
- Added explosive furniture NPCs
	- ...adding a whole new dimension to the game!
	- Fine-tuned general explosion physics in the process
- Added thermodynamics and sounds to NPC simulation
	- With proper heat dissipation and transfer between NPCs and ship/ambient
- Improved Human NPC behaviors:
	- NPCs now "look ahead" when walking and avoid falling into holes
	- NPCs run away from running water
- Added new bomb type: Fire-Extinguishing Bomb
	- Use it to quickly extinguish fires, but watch out for its blast wave!
	- ...also added as NPC
- Added new "Move/Rotate Gripped" tool, aka "Physics Move"
	- Simulates moving or rotating a ship while it is being held by a grip
	- The old "Move/Rotate" tool is not really physical - it simply pauses simulation while the ship is being moved or rotated; this new tool, instead, moves or rotates a ship in a real "physical" fashion
- More tools interact with NPCs
	- Among which: HeatBlaster, laser cannon, fire extinguisher
- The Move, Remove, and Turnaround NPC tools may now be used on *groups* of NPCs
- NPCs on a ship are now lit by the ship's lamps
- Completed cloud rendering improvement work started in previous update
- Added option to prevent propellers from working above water
- Bug fixes:
	- Fixed a crash when using the repair tool on a part of the ship that had exploded (thanks to AlexGuy!)
	- Fixed a crash happening after adding and removing many NPCs multiple times
	- Fixed wrong decimal and thousands separators used for numerical settings (e.g. "12.5" instead of "12,5" on systems with "," as the decimal separator)
		- This bug had been there since day 1 of FloatingSandbox; many thanks to Pac0master!
	- Linux: fixed ShipBuilder window not opening up as maximized