@@ -4,6 +4,8 @@ TODO
 - Improved auto-focus on ship
 - Clouds' horizontal positions are now perspective-corrected
 	- Thanks to Dario Bazzichetto for the idea!
+- ShipBuilder:
+	- Added StructureTracer tool: automatically traces a ship's hull from a texture
 
 1.19.1
 - Added explosive furniture NPCs
